[package]
name = "nosql"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "1.2.2"
mongodb = {version = "1.2.2", default-features = false, features = ["sync"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
